<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParametreActivity">


<!-- Langue -->
<TextView
    android:id="@+id/langueLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/langue"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Spinner
    android:id="@+id/langueSpinner"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@+id/langueLabel"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<!-- Niveau de son -->
<TextView
    android:id="@+id/sonLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Niveau de son"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/langueSpinner" />

<SeekBar
    android:id="@+id/sonSeekBar"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@+id/sonLabel"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/langueSpinner" />

<!-- Vibration -->
<TextView
    android:id="@+id/vibrationLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Vibration"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/sonSeekBar" />

<Switch
    android:id="@+id/vibrationSwitch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@+id/vibrationLabel"
    app:layout_constraintTop_toBottomOf="@+id/sonSeekBar" />

<!-- Mode nuit -->
<TextView
    android:id="@+id/modeNuitLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Mode nuit"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/vibrationSwitch" />

<Switch
    android:id="@+id/modeNuitSwitch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@+id/modeNuitLabel"
    app:layout_constraintTop_toBottomOf="@+id/vibrationSwitch" />

<!-- Notifications -->
<TextView
    android:id="@+id/notificationsLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Notifications"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/modeNuitSwitch" />

<Switch
    android:id="@+id/notificationsSwitch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@+id/notificationsLabel"
    app:layout_constraintTop_toBottomOf="@+id/modeNuitSwitch" />

    <Button
        android:id="@+id/enregistrerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menuprincipaleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
